# nexcore-education-machine

./: Cargo.toml  README.md
src/: assessment.rs  error.rs  grounding.rs  learner.rs  lesson.rs  lib.rs  prelude.rs  spaced_repetition.rs  state_machine.rs  subject.rs  types.rs
