
[package]
name = "nexcore-education-machine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "General-purpose education engine: primitive decomposition, Bayesian mastery, spaced repetition"
license = "MIT"
repository = "https://github.com/nexvigilant/nexcore"
keywords = ["education", "mastery", "bayesian", "spaced-repetition", "primitives"]
categories = ["algorithms", "science"]

[dependencies]
nexcore-lex-primitiva = { version = "0.1.0", path = "../nexcore-lex-primitiva", registry = "nexcore" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }

[lints]
workspace = true
